2025-01-29T01:26:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13022828265 # 1092
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-29
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3414 / 0 3419 / +0 +5

2025-01-28T12:37:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13010594870 # 1091
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-28
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3413 / 0 3414 / +0 +1

2025-01-28T01:26:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13001763414 # 1090
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-28
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3412 / 0 3413 / +0 +1

2025-01-27T01:36:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12980432631 # 1088
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-27
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3411 / 0 3412 / +0 +1

2025-01-26T01:36:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12970257618 # 1086
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-26
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3410 / 0 3411 / +0 +1

2025-01-25T12:34:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12964962928 # 1085