@@ -1,3 +1,9 @@
+2025-01-29T12:37:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13031475148 # 1093
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-29
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3419 / 0 3422 / +0 +3
+
 2025-01-29T01:26:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13022828265 # 1092
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-01-29
